test/tests/compiler/18_structures/valid/import_and_use/plx1_use_stdlib_quick_exit.plx
use "stdlib"

pub fn main(none) i32 {
    quick_exit(0)
    return 1
}
