test/tests/compiler/18_structures/invalid_parse/struct_decl_kw_wrong_order.plx
# struct keyword must come before tag
x type struc ( a: i32 )

pub fn main(none) i32 {
    return 0
}
